# semf-lib

./: CHANGELOG.md  LICENSE.md  README.md
Communication/: i2cscanner.cpp  i2cscanner.h  softi2cmaster.cpp  softi2cmaster.h
Core/: debug.h  error.cpp  error.h
Input/: frequencyin.cpp  frequencyin.h
Interfaces/: aescbc.h  analogin.h  analogindma.h  analogout.h  analogoutdma.h  can.h  canhardware.cpp  canhardware.h  communication.h  communicationhardware.h  communicationhardwareasynchronous.h  communicationhardwaresynchronousmaster.h  communicationhardwaresynchronousslave.h  crc.cpp  crc.h  criticalsection.cpp  criticalsection.h  errorcorrectioncode.h  externalinterrupt.h  flash.h  gpio.h  hash.h  i2c.h  i2cmasterhardware.cpp  i2cmasterhardware.h  i2cslavehardware.cpp  i2cslavehardware.h  inputcapture.h  outputcompare.cpp  outputcompare.h  power.h  pwm.h  rtc.h  signaturepkcs1.h  spi.h  spimasterhardware.cpp  spimasterhardware.h  spislavehardware.cpp  spislavehardware.h  storage.h  (+5 more)
Output/: led.h  (+10 more)
examples/input/sensor/: CMakeLists.txt  README.md
examples/input/sensor/src/: main.cpp
examples/input/sensor/src/layers/: app.cpp  app.h  bsp.cpp  bsp.h  msp.cpp  msp.h
examples/input/sensor/src/layers/app/: myapp.cpp  myapp.h
examples/input/sensor/src/layers/bsp/: temperature.cpp  temperature.h
examples/input/sensor/src/layers/msp/: analoginmanipulator.cpp  analoginmanipulator.h
examples/system/clock/: CMakeLists.txt  README.md
examples/system/clock/src/: main.cpp
examples/system/timebase/: CMakeLists.txt  README.md
examples/system/timebase/src/: main.cpp
examples/system/timebase/src/layers/: app.cpp  app.h  bsp.cpp  bsp.h  msp.cpp  msp.h
examples/system/timebase/src/layers/app/: myapp.cpp  myapp.h  valuex.cpp  valuex.h
examples/utils/core/error/: .gitignore  CMakeLists.txt  README.md
examples/utils/core/error/src/: main.cpp
examples/utils/core/error/src/layers/: app.cpp  app.h
examples/utils/core/error/src/layers/app/: component.cpp  component.h  myapp.cpp  myapp.h
examples/utils/core/error/src/utils/: userclasses.h
(+366 files in other folders)
